[package]
name = "seesea"
version = "0.1.0"
edition = "2021"

default-run = "cli"

[features]
default = ["llvm", "cranelift", "logging"]
llvm = ["dep:llvm-sys"]
logging = []
# TODO: make sure its ok that this has the same name as the crate.
cranelift = ["dep:cranelift", "dep:cranelift-module", "dep:cranelift-jit", "dep:cranelift-native", "dep:cranelift-object"]

[dependencies]

# Lexer generator (source code -> token stream)
logos = "0.13.0"

llvm-sys = { version = "160.1.0", optional = true }

cranelift = { version = "0.100.0", optional = true }
cranelift-module = { version = "0.100.0", optional = true }
cranelift-jit = { version = "0.100.0", optional = true }
cranelift-native = { version = "0.100.0", optional = true }
cranelift-object = { version = "0.100.0", optional = true }


[profile.release]
lto = true
